--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
-/.venv
+# ignore all .pyc files
+*.pyc
+/blog/__pycache__/
+/config/__pycache__/
+/blog/__pycache__
+/config/__pycache__
+/.venv/
+/PH.txt
